--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
     "bootstrap": "^4.4.1",
+    "hc-sticky": "^2.2.6",
     "jquery": "^3.5.1",
     "loading-attribute-polyfill": "^1.5.4",
     "popper.js": "^1.16.1",
