--- a/package.json
+++ b/package.json
@@ -3,52 +3,46 @@
   "version": "5.0.0",
   "description": "Gulp Bootstrap5 scss Pug",
   "main": "block.js",
+  "type": "module",
   "scripts": {
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "img": "gulp img"
   },
   "author": "Khalunin Pavel",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "autoprefixer": "^9.8.6",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "browser-sync": "^2.26.12",
-    "browserslist": "^4.14.4",
+    "autoprefixer": "^10.4.0",
+    "browser-sync": "^2.27.7",
+    "browserslist": "^4.18.1",
     "colors": "^1.4.0",
-    "cssnano": "^4.1.10",
-    "del": "^5.1.0",
-    "flex-gap-polyfill": "^1.0.3",
+    "bootstrap": "^4.4.1",
+    "cssnano": "^5.0.11",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
-    "gulp-cache": "^1.1.3",
-    "gulp-cheerio": "^1.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-if": "^3.0.0",
-    "gulp-load-plugins": "^2.0.4",
+    "gulp-cheerio": "^1.0.0", 
     "gulp-newer": "^1.4.0",
-    "gulp-notify": "^3.2.0",
+    "gulp-notify": "^4.0.0",
     "gulp-npm-dist": "^1.0.3",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
-    "gulp-pug": "^4.0.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-responsive": "^3.0.1",
-    "gulp-rigger": "^0.5.8",
-    "gulp-sass": "^4.1.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.0.0",
     "gulp-sass-glob": "^1.1.0",
+    "gulp-sharp-responsive": "^0.3.0",
     "gulp-svg-sprite": "^1.5.0",
-    "gulp-svgmin": "^2.2.0",
+    "gulp-svgmin": "^4.1.0",
     "gulp-tabify": "0.0.2",
-    "gulp-uglify": "^3.0.2",
-    "postcss": "^7.0.34",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-nested": "^4.2.3"
+    "gulp-vinyl-flow": "^1.1.0",
+    "postcss": "^8.3.11",
+    "postcss-nested": "^5.0.6",
+    "postcss-scss": "^4.0.2",
+    "postcss-sort-media-queries": "^4.1.0",
+    "postcss-syntax": "^0.36.2",
+    "browsersync-ssi": "^0.2.4",
+    "sass": "^1.43.4"
   },
   "optionalDependencies": {},
   "dependencies": {
